// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getScaffoldContent default template should generate basic files for default template 1`] = `
{
  "dependencies": {
    "dev": [
      "@gameroman/config",
      "oxfmt",
      "oxlint",
      "oxlint-tsgolint",
      "typescript",
    ],
  },
  "files": [
    {
      "content": 
"node_modules/

dist/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxfmt";

export default config;
"
,
      "path": "oxfmt.config.ts",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxlint/typeaware";

export default config;
"
,
      "path": "oxlint.config.ts",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "scripts": {
    "test": "bun test",
    "lint": "oxlint",
    "format": "oxfmt"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "@gameroman/config/tsconfig",
  "compilerOptions": {
    "types": ["bun"]
  }
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent default template should generate normal oxlint config without tsgolint feature 1`] = `
{
  "dependencies": {
    "dev": [
      "@gameroman/config",
      "oxfmt",
      "oxlint",
      "typescript",
    ],
  },
  "files": [
    {
      "content": 
"node_modules/

dist/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxfmt";

export default config;
"
,
      "path": "oxfmt.config.ts",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxlint";

export default config;
"
,
      "path": "oxlint.config.ts",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "scripts": {
    "test": "bun test",
    "lint": "oxlint",
    "format": "oxfmt"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "@gameroman/config/tsconfig",
  "compilerOptions": {
    "types": ["bun"]
  }
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent default template should generate tsgolint oxlint config when only tsgolint feature is specified 1`] = `
{
  "dependencies": {
    "dev": [
      "@gameroman/config",
      "oxfmt",
      "oxlint",
      "oxlint-tsgolint",
      "typescript",
    ],
  },
  "files": [
    {
      "content": 
"node_modules/

dist/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxfmt";

export default config;
"
,
      "path": "oxfmt.config.ts",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxlint/typeaware";

export default config;
"
,
      "path": "oxlint.config.ts",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "scripts": {
    "test": "bun test",
    "lint": "oxlint",
    "format": "oxfmt"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "@gameroman/config/tsconfig",
  "compilerOptions": {
    "types": ["bun"]
  }
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent lib template should generate basic files for lib template 1`] = `
{
  "dependencies": {
    "dev": [
      "@gameroman/config",
      "oxfmt",
      "oxlint",
      "oxlint-tsgolint",
      "tsdown",
      "typescript",
    ],
  },
  "files": [
    {
      "content": 
"node_modules/

dist/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxfmt";

export default config;
"
,
      "path": "oxfmt.config.ts",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxlint/typeaware";

export default config;
"
,
      "path": "oxlint.config.ts",
    },
    {
      "content": 
"{
  "name": "",
  "type": "module",
  "scripts": {
    "test": "bun test",
    "lint": "oxlint",
    "format": "oxfmt",
    "build": "tsdown",
    "prepublishOnly": "bun run build"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "@gameroman/config/tsconfig/isolated",
  "compilerOptions": {
    "types": ["bun"]
  }
}
"
,
      "path": "tsconfig.json",
    },
    {
      "content": 
"import { defineConfig } from "tsdown";

export default defineConfig({
  dts: true,
  exports: true,
});
"
,
      "path": "tsdown.config.ts",
    },
  ],
}
`;

exports[`getScaffoldContent exe template should generate basic files for exe template 1`] = `
{
  "dependencies": {
    "dev": [
      "@gameroman/config",
      "oxfmt",
      "oxlint",
      "oxlint-tsgolint",
      "typescript",
    ],
  },
  "files": [
    {
      "content": 
"node_modules/

dist/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxfmt";

export default config;
"
,
      "path": "oxfmt.config.ts",
    },
    {
      "content": 
"import { config } from "@gameroman/config/oxlint/typeaware";

export default config;
"
,
      "path": "oxlint.config.ts",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "scripts": {
    "test": "bun test",
    "lint": "oxlint",
    "format": "oxfmt",
    "dev": "NODE_ENV=development bun run ./src/index.ts",
    "build": "NODE_ENV=production bun build --minify --compile ./src/index.ts --outfile=dist/bot --target=bun-linux-arm64"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "@gameroman/config/tsconfig",
  "compilerOptions": {
    "types": ["bun"]
  }
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent astro template should generate basic files for astro template 1`] = `
{
  "dependencies": {
    "default": [
      "astro",
    ],
    "dev": [
      "@biomejs/biome",
      "@gameroman/config",
      "typescript",
      "wrangler",
    ],
  },
  "files": [
    {
      "content": 
"---
interface Props {
  title: string;
  description: string;
  children: unknown;
}

const canonical = Astro.site
  ? new URL(Astro.url.pathname, Astro.site)
  : undefined;

const { title, description } = Astro.props;
---

<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="referrer" content="no-referrer-when-downgrade" />
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
    />

    <title>{title}</title>
    <meta name="description" content={description} />

    <meta property="og:title" content={title} />
    <meta property="og:description" content={description} />
    <meta property="og:url" content={canonical} />

    <meta name="twitter:title" content={title} />
    <meta name="twitter:description" content={description} />

    <link rel="canonical" href={canonical} />
  </head>

  <body>
    <slot />
  </body>
</html>
"
,
      "path": "src/layouts/Layout.astro",
    },
    {
      "content": 
"node_modules/

dist/

.astro/
.wrangler/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import { defineConfig } from "astro/config";

export default defineConfig({
  output: "static",
});
"
,
      "path": "astro.config.ts",
    },
    {
      "content": 
"{
  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
  "extends": ["@gameroman/config/biome"]
}
"
,
      "path": "biome.jsonc",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "imports": {
    "#layout": "./src/layouts/Layout.astro"
  },
  "scripts": {
    "lint": "biome check",
    "format": "biome check --fix",
    "dev": "astro dev",
    "build": "astro build",
    "deploy": "wrangler deploy"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "astro/tsconfigs/strictest",
  "include": [".astro/types.d.ts", "**/*"],
  "exclude": ["dist"]
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent astro template should generate astro template with tailwindcss 1`] = `
{
  "dependencies": {
    "default": [
      "astro",
      "tailwindcss",
    ],
    "dev": [
      "@biomejs/biome",
      "@gameroman/config",
      "@tailwindcss/vite",
      "typescript",
      "wrangler",
    ],
  },
  "files": [
    {
      "content": 
"---
import "#styles";

interface Props {
  title: string;
  description: string;
  children: unknown;
}

const canonical = Astro.site
  ? new URL(Astro.url.pathname, Astro.site)
  : undefined;

const { title, description } = Astro.props;
---

<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="referrer" content="no-referrer-when-downgrade" />
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
    />

    <title>{title}</title>
    <meta name="description" content={description} />

    <meta property="og:title" content={title} />
    <meta property="og:description" content={description} />
    <meta property="og:url" content={canonical} />

    <meta name="twitter:title" content={title} />
    <meta name="twitter:description" content={description} />

    <link rel="canonical" href={canonical} />
  </head>

  <body>
    <slot />
  </body>
</html>
"
,
      "path": "src/layouts/Layout.astro",
    },
    {
      "content": 
"---
import Layout from "#layout";

const title = "title";
const description = "description";
---

<Layout {title} {description}>
  <main class="container mx-auto p-4">
    <h1 class="text-2xl font-bold mb-4">App</h1>
  </main>
</Layout>
"
,
      "path": "src/pages/index.astro",
    },
    {
      "content": 
"@import "tailwindcss";
"
,
      "path": "src/styles/global.css",
    },
    {
      "content": 
"node_modules/

dist/

.astro/
.wrangler/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import tailwindcss from "@tailwindcss/vite";
import { defineConfig } from "astro/config";

export default defineConfig({
  output: "static",
  vite: { plugins: [tailwindcss()] },
});
"
,
      "path": "astro.config.ts",
    },
    {
      "content": 
"{
  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
  "extends": ["@gameroman/config/biome"],
  "css": { "parser": { "tailwindDirectives": true } }
}
"
,
      "path": "biome.jsonc",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "imports": {
    "#layout": "./src/layouts/Layout.astro",
    "#styles": "./src/styles/global.css"
  },
  "scripts": {
    "lint": "biome check",
    "format": "biome check --fix",
    "dev": "astro dev",
    "build": "astro build",
    "deploy": "wrangler deploy"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"/** @type {import('tailwindcss').Config} */
export default {
  content: { files: ["./src/**/*.{ts,tsx,astro}"] },
};
"
,
      "path": "tailwind.config.ts",
    },
    {
      "content": 
"{
  "extends": "astro/tsconfigs/strictest",
  "include": [".astro/types.d.ts", "**/*"],
  "exclude": ["dist"]
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent astro template should generate astro template with solidjs 1`] = `
{
  "dependencies": {
    "default": [
      "astro",
      "solid-js",
    ],
    "dev": [
      "@astrojs/solid-js",
      "@biomejs/biome",
      "@gameroman/config",
      "typescript",
      "wrangler",
    ],
  },
  "files": [
    {
      "content": 
"---
interface Props {
  title: string;
  description: string;
  children: unknown;
}

const canonical = Astro.site
  ? new URL(Astro.url.pathname, Astro.site)
  : undefined;

const { title, description } = Astro.props;
---

<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="referrer" content="no-referrer-when-downgrade" />
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
    />

    <title>{title}</title>
    <meta name="description" content={description} />

    <meta property="og:title" content={title} />
    <meta property="og:description" content={description} />
    <meta property="og:url" content={canonical} />

    <meta name="twitter:title" content={title} />
    <meta name="twitter:description" content={description} />

    <link rel="canonical" href={canonical} />
  </head>

  <body>
    <slot />
  </body>
</html>
"
,
      "path": "src/layouts/Layout.astro",
    },
    {
      "content": 
"node_modules/

dist/

.astro/
.wrangler/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import solid from "@astrojs/solid-js";
import { defineConfig } from "astro/config";

export default defineConfig({
  output: "static",
  integrations: [solid()],
});
"
,
      "path": "astro.config.ts",
    },
    {
      "content": 
"{
  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
  "extends": ["@gameroman/config/biome"]
}
"
,
      "path": "biome.jsonc",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "imports": {
    "#layout": "./src/layouts/Layout.astro"
  },
  "scripts": {
    "lint": "biome check",
    "format": "biome check --fix",
    "dev": "astro dev",
    "build": "astro build",
    "deploy": "wrangler deploy"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"{
  "extends": "astro/tsconfigs/strictest",
  "compilerOptions": {
    "jsxImportSource": "solid-js",
    "jsx": "preserve",
    "types": ["bun"]
  },
  "include": [".astro/types.d.ts", "**/*"],
  "exclude": ["dist"]
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;

exports[`getScaffoldContent astro template should generate astro template with solidjs and tailwindcss 1`] = `
{
  "dependencies": {
    "default": [
      "astro",
      "solid-js",
      "tailwindcss",
    ],
    "dev": [
      "@astrojs/solid-js",
      "@biomejs/biome",
      "@gameroman/config",
      "@tailwindcss/vite",
      "typescript",
      "wrangler",
    ],
  },
  "files": [
    {
      "content": 
"import { createSignal } from "solid-js";

function App() {
  return (
    <main class="container mx-auto p-4">
      <h1 class="text-2xl font-bold mb-4">App</h1>
    </main>
  );
}

export default App;
"
,
      "path": "src/components/App.tsx",
    },
    {
      "content": 
"---
import "#styles";

interface Props {
  title: string;
  description: string;
  children: unknown;
}

const canonical = Astro.site
  ? new URL(Astro.url.pathname, Astro.site)
  : undefined;

const { title, description } = Astro.props;
---

<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="referrer" content="no-referrer-when-downgrade" />
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
    />

    <title>{title}</title>
    <meta name="description" content={description} />

    <meta property="og:title" content={title} />
    <meta property="og:description" content={description} />
    <meta property="og:url" content={canonical} />

    <meta name="twitter:title" content={title} />
    <meta name="twitter:description" content={description} />

    <link rel="canonical" href={canonical} />
  </head>

  <body>
    <slot />
  </body>
</html>
"
,
      "path": "src/layouts/Layout.astro",
    },
    {
      "content": 
"---
import App from "#app";
import Layout from "#layout";

const title = "title";
const description = "description";
---

<Layout {title} {description}>
  <App client:load />
</Layout>
"
,
      "path": "src/pages/index.astro",
    },
    {
      "content": 
"@import "tailwindcss";
"
,
      "path": "src/styles/global.css",
    },
    {
      "content": 
"node_modules/

dist/

.astro/
.wrangler/
"
,
      "path": ".gitignore",
    },
    {
      "content": 
"import solid from "@astrojs/solid-js";
import tailwindcss from "@tailwindcss/vite";
import { defineConfig } from "astro/config";

export default defineConfig({
  output: "static",
  integrations: [solid()],
  vite: { plugins: [tailwindcss()] },
});
"
,
      "path": "astro.config.ts",
    },
    {
      "content": 
"{
  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
  "extends": ["@gameroman/config/biome"],
  "css": { "parser": { "tailwindDirectives": true } }
}
"
,
      "path": "biome.jsonc",
    },
    {
      "content": 
"{
  "private": true,
  "type": "module",
  "imports": {
    "#app": "./src/components/App.tsx",
    "#layout": "./src/layouts/Layout.astro",
    "#styles": "./src/styles/global.css"
  },
  "scripts": {
    "lint": "biome check",
    "format": "biome check --fix",
    "dev": "astro dev",
    "build": "astro build",
    "deploy": "wrangler deploy"
  }
}
"
,
      "path": "package.json",
    },
    {
      "content": 
"/** @type {import('tailwindcss').Config} */
export default {
  content: { files: ["./src/**/*.{ts,tsx,astro}"] },
};
"
,
      "path": "tailwind.config.ts",
    },
    {
      "content": 
"{
  "extends": "astro/tsconfigs/strictest",
  "compilerOptions": {
    "jsxImportSource": "solid-js",
    "jsx": "preserve",
    "types": ["bun"]
  },
  "include": [".astro/types.d.ts", "**/*"],
  "exclude": ["dist"]
}
"
,
      "path": "tsconfig.json",
    },
  ],
}
`;
